Fixes #17649: doc conflicting with tests

--- a/rudder-lang/docs/index.adoc
+++ b/rudder-lang/docs/index.adoc
@@ -48,7 +48,7 @@ Once compiled to _CFEngine_ code:
 .ntp.rl.cf
 [source,cfengine]
 ----
-include::examples/ntp.rl.cf[]
+include::examples/documentation_ntp.rl.cf[]
 ----
 // TODO: comparison with CFEngine, Puppet (mgmt ?)
 
